<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSS Feeds Reader</string>
    <string name="main_activity">Feeds</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add Feed</string>
    <string name="menu_read">Mark as read</string>
    <string name="title_activity_add_feed">Add Feed</string>
    <string name="action_settings">Settings</string>
    <string name="add_label1">URL \t: </string>
    <string name="add_label2">Name\t: </string>
    <string name="add_url">URL of RSS feed</string>
    <string name="add_name">The name of the site / service</string>
    <string name="add_submit">Add</string>
    <string name="title_activity_manage_feeds">Manage Feeds</string>
    <string name="title_activity_display_settings">Display</string>
    <string name="display_read_articles">Show read articles</string>
    <string name="display_sort">Sort :</string>
    <string name="display_sort_asc">From oldest to newest</string>
    <string name="display_sort_desc">From newest to oldest</string>
    <string name="display_sort_sources">By sources</string>
    <string name="display_delete">Delete articles older than :</string>
    <string name="display_delete_1_month">1 month</string>
    <string name="display_delete_6_months">6 months</string>
    <string name="display_delete_1_year">1 year</string>
    <string name="title_activity_item_detail">Article Detail</string>
    <string name="title_activity_edit_feed">Edit Feed</string>
    <string name="edit_submit">Edit</string>
    <string name="title_activity_my">MyActivity</string>

</resources>
