<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DisplaySettings">

    <CheckBox
        android:id="@+id/id_read_articles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_read_articles"
        android:checked="false" />
    <TextView
        android:text="@string/display_sort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/display_group_sort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/display_sort_radio2">
        <RadioButton
            android:id="@+id/display_sort_radio1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_sort_asc" />
        <RadioButton
            android:id="@+id/display_sort_radio2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_sort_desc" />
    </RadioGroup>
    <CheckBox
        android:id="@+id/display_sort_source"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_sort_sources"
        android:checked="false" />
    <TextView
        android:text="@string/display_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/display_delete_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/display_delete_radio2"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/display_delete_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_delete_1_month" />
        <RadioButton
            android:id="@+id/display_delete_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_delete_6_months" />
        <RadioButton
            android:id="@+id/display_delete_radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_delete_1_year" />
    </RadioGroup>

</LinearLayout>
