<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_read"
        android:icon="@drawable/ic_action_read"
        android:showAsAction="ifRoom"
        android:title="@string/menu_read"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings">
        <menu>
            <item android:id="@+id/settings_manage" android:title="Manage feeds" android:showAsAction="ifRoom" />
            <item android:id="@+id/settings_display" android:title="Display" android:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>
