<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddFeed">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/add_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
        <EditText
            android:id="@+id/item_add_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_url"
            android:inputType="textUri"
            android:lines="1"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/add_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
        <EditText
            android:id="@+id/item_add_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_name"
            android:inputType="text"
            android:lines="1"
            android:layout_weight="1" />
    </LinearLayout>
    <Button
        android:id="@+id/item_add_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_submit"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"/>

</LinearLayout>